# arb-finder

./: .gitignore  ARCHITECTURE_REBUILD.md  Cargo.toml  README.md  REBUILD_STATUS.md  config.toml
adapters/binance/: Cargo.toml
adapters/binance/src/: client.rs  error.rs  lib.rs  model.rs  websocket.rs
adapters/binance/tests/: integration_test.rs
adapters/coinbase/: Cargo.toml
adapters/coinbase/src/: client.rs  error.rs  lib.rs  model.rs
adapters/kraken/: Cargo.toml
adapters/kraken/src/: client.rs  error.rs  lib.rs  model.rs
analysis/: analysis.ipynb  ml_training.ipynb
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  prelude.rs
crates/core/src/config/: mod.rs
crates/core/src/types/: arbitrage.rs  market.rs  mod.rs  order.rs  venue.rs
crates/core/src/utils/: id_generator.rs  math.rs  mod.rs  time.rs  validation.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: heartbeat.rs  lib.rs  manager.rs  normalizer.rs  prelude.rs  rate_limiter.rs  rest.rs  traits.rs  websocket.rs
crates/execution/: Cargo.toml
crates/execution/src/: engine.rs  lib.rs  portfolio.rs  risk.rs
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: alerts.rs  health.rs  lib.rs  logging.rs  metrics.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: aggregator.rs  book.rs  builder.rs  cache.rs  events.rs  lib.rs  manager.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: arbitrage.rs  lib.rs  simple.rs
models/: arbitrage_net.onnx  arbitrage_net.pth  feature_cols.txt  scaler.joblib  scaler_params.json  xgboost_classifier.joblib  xgboost_classifier.json
scripts/: export.py  model.py  train.py  train_nn.py  train_xgb.py
src/: data_export.rs  lib.rs  main.rs
tests/: e2e_arbitrage_test.rs
