[package]
name = "arbfinder-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Data types
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ordered-float = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP (needed for error types)
reqwest = { workspace = true }

# Utilities
url = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mockall = { workspace = true }